# finance_majordomo

./: .gitignore  Makefile  README.md  manage.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: test_and_linter_check.yaml
common/utils/: datetime_utils.py  fields.py  meta_test_executor.py  money_formatter.py  stocks.py  values_formatters.py
finance_majordomo/: asgi.py  settings.py  urls.py  views.py  wsgi.py
finance_majordomo/assets/: apps.py  models.py
finance_majordomo/assets/migrations/: 0001_initial.py  0002_alter_asset_asset_type.py  0003_assetofportfolio.py  0004_asset_portfolios.py
finance_majordomo/currencies/: apps.py  models.py  utils.py
finance_majordomo/currencies/migrations/: 0001_initial.py
finance_majordomo/dividends/: apps.py  models.py  urls.py  utils.py  views.py
finance_majordomo/dividends/dividend_services/: accrual_calc_services.py  dividend_model_management_services.py  dividend_view_services.py  dividends_parser_services.py
finance_majordomo/dividends/migrations/: 0001_initial.py  0002_dividendsofuser_dividend_users.py  0002_initial.py  0003_dividendsofportfolio.py  0003_rename_status_dividendsofuser_is_received.py  0004_alter_dividend_amount_alter_dividend_creation_date_and_more.py
finance_majordomo/dividends/services/: dividend_services.py
finance_majordomo/dividends/tests/: setting.py  test_models.py  test_utils.py  test_veiws.py
finance_majordomo/search/: apps.py  forms.py  urls.py  views.py
finance_majordomo/stocks/: apps.py  forms.py  models.py  urls.py  utils.py  views.py
finance_majordomo/stocks/fixtures/: AssetsHistoricalData.json  Dividend.json  DividendOfPortfolio.json  accrual.json  accruals_of_portfolio.json  asset_of_portfolio.json  assets.json  bonds.json  currency_rate.json  portfolio.json  prod_calendar.json  stocks.json  transaction.json  user.json  user_settings.json
finance_majordomo/stocks/forms/: asset_forms.py  search_forms.py  transaction_forms.py
finance_majordomo/templates/: base.html  base_create_and_update.html  base_delete.html  index.html
finance_majordomo/transactions/: a.py  admin.py  apps.py  b.py  forms.py  models.py  urls.py  utils.py  views.py
finance_majordomo/users/: apps.py  forms.py  models.py  urls.py  utils.py  views.py
(+179 files in other folders)
