[tool.poetry]
name = "finance-majordomo"
version = "0.1.0"
description = "fin majordomo app"
authors = ["Unshock <nedashkovsky@ymail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.4"
django-bootstrap4 = "^22.3"
requests = "^2.28.1"
apimoex = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
