[tool.poetry]
name = "finance-majordomo"
version = "0.1.0"
description = "fin majordomo app"
authors = ["Unshock <nedashkovsky@ymail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.4"
django-bootstrap4 = "^22.3"
requests = "^2.28.1"
apimoex = "^1.2.0"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.2"
moneyfmt = "^1.0.3"
gunicorn = "^20.1.0"
django-crispy-forms = "^2.0"
crispy-bootstrap4 = "^2022.1"
mock = "^5.0.2"
xmltodict = "^0.13.0"
django-service-objects = "^0.7.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest-django = "^4.5.2"
requests-mock = "^1.10.0"
pytest-cov = "^4.1.0"
simplejson = "^3.19.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage]
    [tool.coverage.run]
    omit = [
        # omit anything in a .local directory anywhere
        '*/.local/*',
        '__init__.py',
        'tests/*',
        '*/tests/*',
        # omit anything in a .venv directory anywhere
        '.venv/*'
    ]

    [tool.coverage.report]
    skip_empty = true
